Reverted commit 6aafc6f6fefee429dff0908f2b2391fc5a937201, fixed position hides button behind goals

--- a/public/scss/foundation.scss
+++ b/public/scss/foundation.scss
@@ -74,6 +74,6 @@ body { background: url(/modules/core/img/background.jpg) no-repeat center center
 .date-calendar-dialog { z-index: 1000; }
 
 .standout { color: white; }
-.create { position: fixed; top: 75%; right: 20%; }
+.create { padding: 20px; }
 
 .panel.drag-enter { background-color: #eee;}
